# OSS-scraper

./: .gitattributes  .gitignore  Cargo.toml  README.md  extensions.toml
output/: hunter.csv  hunter_issues.csv
output/commits/: hunter-commit-file-dev-graphql.csv  hunter-commit-file-dev.csv  hunter-sokrates.csv
output/developer_commits_all/: 918393+Gerrrr_at_users_noreply_github_com_dev_stats.csv  ShaunakDas88_at_users_noreply_github_com_dev_stats.csv  guy_at_waftex_com_dev_stats.csv  henrik_at_nyrk_io_dev_stats.csv  matt_at_codeblueprint_co_uk_dev_stats.csv  matt_at_nyrk_io_dev_stats.csv  msmygit_at_users_noreply_github_com_dev_stats.csv  pkolaczk_at_datastax_com_dev_stats.csv  pkolaczk_at_gmail_com_dev_stats.csv  pushkala_pattabhiraman_at_datastax_com_dev_stats.csv  rook_at_redhat_com_dev_stats.csv  sahan_k_j2000_at_gmail_com_dev_stats.csv  sean_mccarthy_dev_at_gmail_com_dev_stats.csv  shaunakdas88_at_gmail_com_dev_stats.csv  slytherinpride96_at_gmail_com_dev_stats.csv  spm64_at_pitt_edu_dev_stats.csv
output/developer_issues_all/: Alex Sorokoumov.csv  Dave Fisher.csv  Henrik Ingo.csv  Joe Talerico (rook).csv  Omar Toutounji.csv  Sean McCarthy.csv  brucearctor.csv
output/issues/: hunter_issues.csv  openmq_issues.csv  volttron-lib-base-driver_issues.csv
src/: api.rs  commit_metrics_clone.rs  commit_metrics_graphql.rs  commits_metrics.rs  dev_stats.rs  emails.rs  github_issues.rs  main.rs  metrics.rs  new-statistics.rs  pre_post_incubation_analysis.rs  project.rs  repo.rs  sokrates_metrics.rs  statistics.rs  tokei_metrics.rs  utils.rs
tools/: tokei.toml
(+23 files in other folders)
